--- a/agree/res/layout/activity_members_chat.xml
+++ b/agree/res/layout/activity_members_chat.xml
@@ -2,8 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MembersChatActivity"
-     >
+    tools:context=".MembersChatActivity" >
 
     <RelativeLayout
         android:id="@+id/MembersChatTitleLayout1"
@@ -94,9 +93,7 @@
                     android:layout_height="50.0dp"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/setting_click_selector"
-                     >
-
+                    android:background="@drawable/setting_click_selector" >
 
                     <TextView
                         android:id="@+id/textView3"
@@ -106,56 +103,47 @@
                         android:layout_marginLeft="20.0dp"
                         android:background="#aaaaaa" />
 
-                    <Button
-                        android:id="@+id/MembersChatChangeNameBut"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="83.0dp"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
+                        android:layout_marginLeft="20.0dp"
+                        android:drawableLeft="@drawable/chatname"
+                        android:gravity="right|center"
                         android:text="更改名称"
-                        android:paddingLeft="20.0dp"
-                        android:background="@drawable/but_click_selector"
                         android:textColor="#000000"
-                        android:textSize="15.0sp"
-                        android:gravity="left|center"
-                        android:layout_marginBottom="0.50dp"
-                         />
-
+                        android:textSize="15.0sp" />
                 </RelativeLayout>
 
                 <RelativeLayout
                     android:id="@+id/MembersChatAddMembersLayout"
                     android:layout_width="match_parent"
                     android:layout_height="50.0dp"
-                    android:layout_centerHorizontal="true"
                     android:layout_below="@+id/MembersChatChangeNameLayout"
-                     >
-
+                    android:layout_centerHorizontal="true" >
 
                     <TextView
                         android:id="@+id/textView7"
                         android:layout_width="match_parent"
                         android:layout_height="0.50dp"
                         android:layout_alignParentBottom="true"
-                        android:background="#aaaaaa"
                         android:layout_marginLeft="20.0dp"
-                         />
+                        android:background="#aaaaaa" />
 
-                    <Button
-                        android:id="@+id/MembersChatAddMembers"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="83.0dp"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
+                        android:layout_marginLeft="20.0dp"
+                        android:drawableLeft="@drawable/addmember"
+                        android:gravity="right|center"
                         android:text="添加成员"
-                        android:paddingLeft="20.0dp"
-                        android:background="@drawable/but_click_selector"
                         android:textColor="#000000"
-                        android:textSize="15.0sp"
-                        android:gravity="left|center" 
-                        android:layout_marginBottom="0.50dp"
-                        />
-
+                        android:textSize="15.0sp" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -163,34 +151,28 @@
                     android:layout_width="match_parent"
                     android:layout_height="50.0dp"
                     android:layout_below="@+id/MembersChatAddMembersLayout"
-                    android:layout_centerHorizontal="true"
-                     >
+                    android:layout_centerHorizontal="true" >
 
                     <TextView
                         android:id="@+id/textView9"
                         android:layout_width="match_parent"
                         android:layout_height="0.50dp"
                         android:layout_alignParentBottom="true"
-                        android:background="#aaaaaa"
-                         />
+                        android:background="#aaaaaa" />
 
-                    <Button
-                        android:id="@+id/MembersChatExitGroup"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
+                    <TextView
+                        android:id="@+id/textView10"
+                        android:layout_width="83.0dp"
+                        android:layout_height="wrap_content"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
+                        android:layout_marginLeft="20.0dp"
+                        android:drawableLeft="@drawable/settingexit"
+                        android:gravity="right|center"
                         android:text="退出群聊"
-                        android:paddingLeft="20.0dp"
-                        android:background="@drawable/but_click_selector"
                         android:textColor="#000000"
-                        android:textSize="15.0sp"
-                        android:gravity="left|center" 
-                        android:layout_marginBottom="0.50dp"
-                        />
-
+                        android:textSize="15.0sp" />
                 </RelativeLayout>
-
             </RelativeLayout>
 
             <RelativeLayout
@@ -234,8 +216,8 @@
                     android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_centerHorizontal="true"
-                    android:divider="@null"
-                    android:background="#ffffff" >
+                    android:background="#ffffff"
+                    android:divider="@null" >
                 </ListView>
             </RelativeLayout>
         </RelativeLayout>
