--- a/agree/res/layout/activity_party_details.xml
+++ b/agree/res/layout/activity_party_details.xml
@@ -75,7 +75,7 @@
         <RelativeLayout
             android:id="@+id/PartyDetails_map_layout"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="150dp"
             android:layout_margin="5.0dp" >
         </RelativeLayout>
 
@@ -108,9 +108,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="30.0dp"
                 android:layout_below="@+id/PartyDetails_partyaddress_layout"
-                android:layout_centerHorizontal="true" 
-                android:layout_marginTop="15.0dp"
-                >
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="15.0dp" >
 
                 <TextView
                     android:id="@+id/PartyDetails_partyname"
@@ -120,8 +119,7 @@
                     android:layout_centerHorizontal="true"
                     android:text="@string/partydetails_partyname"
                     android:textColor="@drawable/PartyDetails_name_color"
-                    android:textSize="22.0sp"
-                     />
+                    android:textSize="22.0sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -260,33 +258,16 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/PartyDetails_party_organizer_layout"
-                android:layout_width="match_parent"
-                android:layout_height="30.0dp"
-                android:layout_below="@+id/PartyDetails_prompt"
-                android:layout_centerHorizontal="true" >
-
-                <TextView
-                    android:id="@+id/PartyDetails_party_organizer"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerHorizontal="true"
-                    android:layout_centerVertical="true"
-                    android:text="@string/partydetails_party_organizer"
-                    android:textSize="13.0sp" />
-            </RelativeLayout>
-
-            <RelativeLayout
                 android:id="@+id/PartyDetails_prompt"
                 android:layout_width="match_parent"
-                android:layout_height="10.0dp"
+                android:layout_height="30.0dp"
                 android:layout_alignParentLeft="true"
                 android:layout_below="@+id/relativeLayout1"
                 android:layout_marginTop="10.0dp" >
 
                 <!-- 30.0dp -->
-                <!--
-                     <TextView
+
+                <TextView
                     android:id="@+id/textView7"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -295,7 +276,6 @@
                     android:text="@string/partydetails_prompt"
                     android:textColor="#d3d3d3"
                     android:textSize="13.0sp" />
-                -->
             </RelativeLayout>
 
             <RelativeLayout
@@ -315,6 +295,24 @@
                     android:text="@string/partydetails_apply"
                     android:textColor="#ffffff"
                     android:textSize="15.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/PartyDetails_party_organizer_layout"
+                android:layout_width="match_parent"
+                android:layout_height="30.0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_below="@+id/PartyDetails_prompt"
+                android:layout_marginTop="32dp" >
+
+                <TextView
+                    android:id="@+id/PartyDetails_party_organizer"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:text="@string/partydetails_party_organizer"
+                    android:textSize="13.0sp" />
             </RelativeLayout>
         </RelativeLayout>
     </RelativeLayout>
