--- a/agree/res/layout/activity_graphic_preview.xml
+++ b/agree/res/layout/activity_graphic_preview.xml
@@ -2,18 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".GraphicPreviewActivity"
     android:background="#efefef"
-     >
+    tools:context=".GraphicPreviewActivity" >
 
     <RelativeLayout
         android:id="@+id/GraphicPreviewTitleLayout"
         android:layout_width="match_parent"
         android:layout_height="40.0dp"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" 
-        android:background="#ffffff"
-        >
+        android:layout_centerHorizontal="true"
+        android:background="#ffffff" >
 
         <TextView
             android:id="@+id/GraphicPreviewBack"
@@ -21,33 +19,25 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:text="返回"
-            android:textSize="13.0sp"
-            android:textColor="@drawable/title_left_color"
             android:gravity="center"
-             />
+            android:text="返回"
+            android:textColor="@drawable/title_left_color"
+            android:textSize="13.0sp" />
 
         <TextView
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="0.50dp"
             android:layout_alignParentBottom="true"
-            android:background="#aaaaaa"
-             />
-
-        
-
+            android:background="#aaaaaa" />
     </RelativeLayout>
 
     <ListView
         android:id="@+id/GraphicPreviewListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_below="@+id/GraphicPreviewTitleLayout"
-        android:layout_centerHorizontal="true"
-        android:background="#ffffff"
-         >
-
+        android:background="#ffffff" >
     </ListView>
 
 </RelativeLayout>
