--- a/agree/res/layout/activity_add_new_party.xml
+++ b/agree/res/layout/activity_add_new_party.xml
@@ -101,7 +101,7 @@
         <RelativeLayout
             android:id="@+id/Add_New_Party_message_layout"
             android:layout_width="match_parent"
-            android:layout_height="132.0dp"
+            android:layout_height="220.0dp"
             android:layout_below="@+id/relativeLayout1"
             android:layout_centerHorizontal="true" >
 
@@ -119,7 +119,7 @@
                     android:layout_height="35.0dp"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="20.0dp"
+                    android:layout_marginLeft="52.0dp"
                     android:layout_marginRight="20.0dp"
                     android:background="@null"
                     android:ems="10"
@@ -139,6 +139,15 @@
                     android:layout_alignParentBottom="true"
                     android:layout_marginLeft="20.0dp"
                     android:background="#aaaaaa" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20.0dp"
+                    android:src="@drawable/partyname" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -151,11 +160,13 @@
 
                 <TextView
                     android:id="@+id/textView7"
-                    android:layout_width="wrap_content"
+                    android:layout_width="110.0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/time"
+                    android:gravity="right|center"
                     android:text="活动开始时间"
                     android:textSize="13.0sp" />
 
@@ -190,7 +201,7 @@
                     android:singleLine="true"
                     android:text="开始时间"
                     android:textColor="#c9c9c9"
-                    android:textSize="13.0sp" />
+                    android:textSize="12.0sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -203,11 +214,13 @@
 
                 <TextView
                     android:id="@+id/textView10"
-                    android:layout_width="wrap_content"
+                    android:layout_width="83.0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/map"
+                    android:gravity="right|center"
                     android:text="活动地点"
                     android:textSize="13.0dp" />
 
@@ -216,7 +229,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="0.50dp"
                     android:layout_alignParentBottom="true"
-                    android:layout_centerHorizontal="true"
+                    android:layout_marginLeft="20.0dp"
                     android:background="#aaaaaa" />
 
                 <ImageView
@@ -242,7 +255,110 @@
                     android:singleLine="true"
                     android:text="地址详情"
                     android:textColor="#c9c9c9"
+                    android:textSize="12.0sp" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/Add_New_Party_activity_cost_layout"
+                android:layout_width="match_parent"
+                android:layout_height="44.0dp"
+                android:layout_below="@+id/Add_New_Party_address"
+                android:layout_centerHorizontal="true"
+                android:background="#ffffff" >
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="83.0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/settingbalance"
+                    android:gravity="right|center"
+                    android:text="活动花费"
                     android:textSize="13.0sp" />
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="17.0dp"
+                    android:layout_height="17.0dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/jiantou" />
+
+                <TextView
+                    android:id="@+id/Add_New_Party_activity_cost"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/textView12"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_toLeftOf="@+id/imageView1"
+                    android:layout_toRightOf="@+id/textView12"
+                    android:gravity="right|center"
+                    android:text="付款方式"
+                    android:textColor="#c9c9c9"
+                    android:textSize="12.0sp" />
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.50dp"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="20.0dp"
+                    android:background="#aaaaaa" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/Add_New_Party_details_layout"
+                android:layout_width="match_parent"
+                android:layout_height="44.0dp"
+                android:layout_below="@+id/Add_New_Party_activity_cost_layout"
+                android:layout_centerHorizontal="true"
+                android:background="#ffffff" >
+
+                <TextView
+                    android:id="@+id/Add_New_Party_details_prompt"
+                    android:layout_width="110.0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/chatname"
+                    android:gravity="right|center"
+                    android:text="聚会详情编辑"
+                    android:textSize="13.0sp" />
+
+                <ImageView
+                    android:id="@+id/imageView1"
+                    android:layout_width="17.0dp"
+                    android:layout_height="17.0dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginRight="20dp"
+                    android:src="@drawable/jiantou" />
+
+                <TextView
+                    android:id="@+id/Add_New_Party_details"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignBottom="@+id/imageView1"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
+                    android:layout_toLeftOf="@+id/imageView1"
+                    android:layout_toRightOf="@+id/Add_New_Party_details_prompt"
+                    android:gravity="right|center"
+                    android:text="内容"
+                    android:textColor="#c9c9c9"
+                    android:textSize="12.0sp" />
+
+                <TextView
+                    android:id="@+id/textView26"
+                    android:layout_width="match_parent"
+                    android:layout_height="0.50dp"
+                    android:layout_alignParentBottom="true"
+                    android:background="#aaaaaa" />
             </RelativeLayout>
         </RelativeLayout>
 
@@ -278,7 +394,7 @@
             </RelativeLayout>
 
             <RelativeLayout
-                android:id="@+id/Add_New_Party_activity_cost_layout"
+                android:id="@+id/Add_New_Party_end_time_layout"
                 android:layout_width="match_parent"
                 android:layout_height="44.0dp"
                 android:layout_below="@+id/relativeLayout3"
@@ -286,62 +402,14 @@
                 android:background="#ffffff" >
 
                 <TextView
-                    android:id="@+id/textView12"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20.0dp"
-                    android:text="活动花费"
-                    android:textSize="13.0sp" />
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="17.0dp"
-                    android:layout_height="17.0dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/jiantou" />
-
-                <TextView
-                    android:id="@+id/Add_New_Party_activity_cost"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignTop="@+id/textView12"
-                    android:layout_marginLeft="5.0dp"
-                    android:layout_marginRight="5.0dp"
-                    android:layout_toLeftOf="@+id/imageView1"
-                    android:layout_toRightOf="@+id/textView12"
-                    android:gravity="right|center"
-                    android:text="付款方式"
-                    android:textColor="#c9c9c9"
-                    android:textSize="13.0sp" />
-
-                <TextView
-                    android:id="@+id/textView14"
-                    android:layout_width="match_parent"
-                    android:layout_height="0.50dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="20.0dp"
-                    android:background="#aaaaaa" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/Add_New_Party_end_time_layout"
-                android:layout_width="match_parent"
-                android:layout_height="44.0dp"
-                android:layout_below="@+id/Add_New_Party_activity_cost_layout"
-                android:layout_centerHorizontal="true"
-                android:background="#ffffff" >
-
-                <TextView
                     android:id="@+id/Add_New_Party_end_time_prompt"
-                    android:layout_width="wrap_content"
+                    android:layout_width="110.0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/time"
+                    android:gravity="right|center"
                     android:text="活动结束时间"
                     android:textSize="13.0sp" />
 
@@ -367,15 +435,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/imageView1"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
                     android:layout_toLeftOf="@+id/imageView1"
                     android:layout_toRightOf="@+id/Add_New_Party_end_time_prompt"
                     android:gravity="right|center"
                     android:text="结束时间"
-                    android:layout_marginLeft="5.0dp"
-                    android:layout_marginRight="5.0dp"
                     android:textColor="#c9c9c9"
-                    android:textSize="13.0sp" />
-
+                    android:textSize="12.0sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -388,11 +455,13 @@
 
                 <TextView
                     android:id="@+id/Add_New_Party_registration_deadline_prompt"
-                    android:layout_width="wrap_content"
+                    android:layout_width="110.0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/time"
+                    android:gravity="right|center"
                     android:text="报名截止时间"
                     android:textSize="13.0sp" />
 
@@ -418,15 +487,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/imageView1"
+                    android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
                     android:layout_toLeftOf="@+id/imageView1"
                     android:layout_toRightOf="@+id/Add_New_Party_registration_deadline_prompt"
                     android:gravity="right|center"
                     android:text="截止时间"
                     android:textColor="#c9c9c9"
-                    android:layout_marginLeft="5.0dp"
-                    android:layout_marginRight="5.0dp"
-                    android:textSize="13.0sp" />
-
+                    android:textSize="12.0sp" />
             </RelativeLayout>
 
             <RelativeLayout
@@ -439,11 +507,13 @@
 
                 <TextView
                     android:id="@+id/Add_New_Party_limit_number_prompt"
-                    android:layout_width="wrap_content"
+                    android:layout_width="83.0dp"
                     android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="20.0dp"
+                    android:drawableLeft="@drawable/addmember"
+                    android:gravity="right|center"
                     android:text="限制人数"
                     android:textSize="13.0sp" />
 
@@ -461,67 +531,17 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignBottom="@+id/imageView1"
-                    android:layout_marginRight="5.0dp"
                     android:layout_marginLeft="5.0dp"
+                    android:layout_marginRight="5.0dp"
                     android:layout_toLeftOf="@+id/imageView1"
                     android:layout_toRightOf="@+id/Add_New_Party_limit_number_prompt"
                     android:gravity="right|center"
                     android:text="人数"
                     android:textColor="#c9c9c9"
-                    android:textSize="13.0sp" />
+                    android:textSize="12.0sp" />
 
                 <TextView
                     android:id="@+id/textView23"
-                    android:layout_width="match_parent"
-                    android:layout_height="0.50dp"
-                    android:layout_alignParentBottom="true"
-                    android:layout_marginLeft="20.0dp"
-                    android:background="#aaaaaa" />
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:id="@+id/Add_New_Party_details_layout"
-                android:layout_width="match_parent"
-                android:layout_height="44.0dp"
-                android:layout_below="@+id/Add_New_Party_limit_number_layout"
-                android:layout_centerHorizontal="true"
-                android:background="#ffffff" >
-
-                <TextView
-                    android:id="@+id/Add_New_Party_details_prompt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentLeft="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="20.0dp"
-                    android:text="聚会详情编辑"
-                    android:textSize="13.0sp" />
-
-                <ImageView
-                    android:id="@+id/imageView1"
-                    android:layout_width="17.0dp"
-                    android:layout_height="17.0dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="20dp"
-                    android:src="@drawable/jiantou" />
-
-                <TextView
-                    android:id="@+id/Add_New_Party_details"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignBottom="@+id/imageView1"
-                    android:layout_marginRight="5.0dp"
-                    android:layout_marginLeft="5.0dp"
-                    android:layout_toLeftOf="@+id/imageView1"
-                    android:layout_toRightOf="@+id/Add_New_Party_details_prompt"
-                    android:gravity="right|center"
-                    android:text="内容"
-                    android:textColor="#c9c9c9"
-                    android:textSize="13.0sp" />
-
-                <TextView
-                    android:id="@+id/textView26"
                     android:layout_width="match_parent"
                     android:layout_height="0.50dp"
                     android:layout_alignParentBottom="true"
