--- a/agree/res/layout/group_tab.xml
+++ b/agree/res/layout/group_tab.xml
@@ -5,14 +5,13 @@
     android:layout_height="match_parent"
     android:background="#ffffff" >
 
-    
-    <include layout="@layout/group_tab_title"/>
+    <include layout="@layout/group_tab_title" />
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="40.0dp"
-         >
+        android:layout_marginTop="40.0dp" >
     </FrameLayout>
 
 </RelativeLayout>
