--- a/agree/res/layout/partyreaduserallfriends_item.xml
+++ b/agree/res/layout/partyreaduserallfriends_item.xml
@@ -18,14 +18,6 @@
             android:background="#aaaaaa"
             android:visibility="gone" />
 
-        <ImageView
-            android:id="@+id/PartyReadUserAllFriends_head"
-            android:layout_width="50.0dp"
-            android:layout_height="50.0dp"
-            android:layout_marginLeft="40.0dp"
-            android:layout_marginTop="5.0dp"
-            android:src="@drawable/login_1" />
-
         <TextView
             android:id="@+id/PartyReadUserAllFriendsLine2"
             android:layout_width="match_parent"
@@ -34,18 +26,68 @@
             android:layout_marginLeft="20.0dp"
             android:background="#aaaaaa" />
 
-        <TextView
-            android:id="@+id/PartyReadUserAllFriends_name"
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:id="@+id/relativeLayout1"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="25dp" >
+
+            <ImageView
+                android:id="@+id/PartyReadUserAllFriends_head"
+                android:layout_width="50.0dp"
+                android:layout_height="50.0dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:src="@drawable/login_1" />
+
+            <TextView
+                android:id="@+id/tv_menmberNum"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:text="Tsa" 
+                android:textColor="#88d4cc"
+                android:visibility="gone"
+                />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="18dp"
-            android:layout_toRightOf="@+id/PartyReadUserAllFriends_head"
-            android:gravity="left|center"
-            android:singleLine="true"
-            android:text="15614"
-            android:textSize="17.0sp" />
+            android:layout_marginLeft="10dp"
+            android:layout_toRightOf="@+id/relativeLayout1" >
+
+            <TextView
+                android:id="@+id/tv_lastmsg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/PartyReadUserAllFriends_name"
+                android:layout_below="@+id/PartyReadUserAllFriends_name"
+                android:layout_marginTop="3dp"
+                android:text="TextView" 
+                android:textColor="#959595"
+                />
+
+            <TextView
+                android:id="@+id/PartyReadUserAllFriends_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentTop="true"
+                android:gravity="left|center"
+                android:singleLine="true"
+                android:text="15614"
+                android:textSize="17.0sp" />
+
+        </RelativeLayout>
+
     </RelativeLayout>
+
     <!-- android:textAppearance="?android:textAppearanceLarge" -->
 
 </RelativeLayout>
