--- a/agree/res/layout/activity_limit_number.xml
+++ b/agree/res/layout/activity_limit_number.xml
@@ -8,14 +8,14 @@
     <RelativeLayout
         android:id="@+id/LimitNumberTitleLayout"
         android:layout_width="match_parent"
-        android:layout_height="40.0dp"
+        android:layout_height="50.0dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:background="#ffffff" >
 
         <RelativeLayout
             android:id="@+id/LimitNumberBackLayout"
-            android:layout_width="60.0dp"
+            android:layout_width="65.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true" >
@@ -33,7 +33,7 @@
 
         <RelativeLayout
             android:id="@+id/LimitNumberOKLayout"
-            android:layout_width="60.0dp"
+            android:layout_width="65.0dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" >
@@ -48,6 +48,15 @@
                 android:textColor="@drawable/title_right_color"
                 android:textSize="@dimen/title_right_size" />
         </RelativeLayout>
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:background="#aaaaaa"
+             />
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -66,6 +75,15 @@
             android:text="请输入该活动的最大参与人数"
             android:textColor="#808080"
             android:textSize="13.0sp" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:background="#aaaaaa"
+             />
+
     </RelativeLayout>
 
     <RelativeLayout
@@ -87,6 +105,14 @@
             android:background="@null"
             android:ems="10"
             android:textSize="13.0sp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="match_parent"
+            android:layout_height="0.50dp"
+            android:layout_alignParentBottom="true"
+            android:background="#aaaaaa"
+            />
 
     </RelativeLayout>
 
